Se agrego el efector final, ahora se puede manipular el efector desde el codigo

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -121,21 +121,28 @@
      "output_type": "stream",
      "text": [
       "EL ID de junta_1 = 17, el ID de junta_2 = 18\n",
-      "El ID de corredera es = 16\n"
+      "El ID de corredera es = 16, el ID del efector final es 28\n"
      ]
     }
    ],
    "source": [
+    "#Manejadores de juntas revolutas\n",
+    "\n",
     "# Obtenemos el manejador de las juntas (joints)\n",
     "returnCode,junta_1 = sim.simxGetObjectHandle(clientID,'eslabon_1',sim.simx_opmode_blocking)\n",
     "returnCode,junta_2 = sim.simxGetObjectHandle(clientID,'eslabon_2',sim.simx_opmode_blocking)\n",
     "#Imprimimos los id de cada junta\n",
     "print(f\"EL ID de junta_1 = {junta_1}, el ID de junta_2 = {junta_2}\")\n",
     "\n",
+    "\n",
+    "#Manejadores de juntas prismaticas\n",
+    "\n",
     "#Obtenemos el manejador de la corredera que se coloca en la base\n",
     "returnCode,corredera = sim.simxGetObjectHandle(clientID,'Corredera',sim.simx_opmode_blocking)\n",
-    "#Imprimimos el id de la corredera\n",
-    "print(f\"El ID de corredera es = {corredera}\")"
+    "#Obtenemos el manejador del efector final\n",
+    "returnCode,efector_cilindro = sim.simxGetObjectHandle(clientID,'junta_efector',sim.simx_opmode_blocking)\n",
+    "#Imprimimos el id de cada junta\n",
+    "print(f\"El ID de corredera es = {corredera}, el ID del efector final es {efector_cilindro}\")"
    ]
   },
   {
@@ -149,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "0\n"
      ]
     }
    ],
@@ -165,7 +172,7 @@
     "#Los angulos deben enviarse en radianes, dado que se trabaja con grados se usara la expresion de la manera siguiente\n",
     "# angulo_en_radianes = angulo_en_grados * pi / 180\n",
     "\n",
-    "angulo_1 = 90 * np.pi/180  #El angulo convertido a radianes para la junta 1.\n",
+    "angulo_1 = 0 * np.pi/180  #El angulo convertido a radianes para la junta 1.\n",
     "angulo_2 = 0* np.pi/180 #El angulo convertido a radianes para la junta 2.\n",
     "\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, junta_1, angulo_1, sim.simx_opmode_oneshot)\n",
@@ -177,10 +184,13 @@
     "\n",
     "#Dado que se debe encontrar expresado en Metros la ecuacion sera la siguiente\n",
     "#distancia_en_metros = distancia / 100\n",
-    "#Para esta configuracion distancia debe ir de 0-30\n",
-    "distancia = 0 / 100 \n",
+    "#Para esta configuracion distancia debe ir de 0 a 30 en el caso de la corredera\n",
+    "distancia = 30 / 100 \n",
+    "#Para esta configuracion distancia debe ir de -5 a 5 en el caso de la corredera\n",
+    "distancia_efector = -0 / 100 \n",
     "\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, corredera,distancia, sim.simx_opmode_oneshot)\n",
+    "retCode = sim.simxSetJointTargetPosition(clientID, efector_cilindro,distancia_efector, sim.simx_opmode_oneshot)\n",
     "print(retCode)"
    ]
   },
@@ -193,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +227,7 @@
     "\n",
     "#Ejemplo de como se usa este metodo\n",
     "mover_junta_revoluta(junta_1,0)\n",
-    "mover_junta_revoluta(junta_2,90)\n",
+    "mover_junta_revoluta(junta_2,0)\n",
     "\n",
     "def mover_junta_prismatica(junta,distancia_desde_origen):\n",
     "    \"\"\"\n",
@@ -225,10 +235,11 @@
     "    en un rango entre [Pos Min - Pos Range] de la junta prismatica en cuestion\n",
     "    \"\"\"\n",
     "    distancia = distancia_desde_origen / 100\n",
-    "    return sim.simxSetJointTargetPosition(clientID, corredera,distancia, sim.simx_opmode_oneshot)\n",
+    "    return sim.simxSetJointTargetPosition(clientID, junta,distancia, sim.simx_opmode_oneshot)\n",
     "\n",
     "#Ejemplo de como se usa este metodo\n",
-    "mover_junta_prismatica(corredera,0)"
+    "mover_junta_prismatica(corredera,0)\n",
+    "mover_junta_prismatica(efector_cilindro,0)"
    ]
   }
  ],
