Se realizaron cambios en el notebook, gramaticos, de sintaxis , se agregaron variables de control para dejar como globales nombres de objetos y valores que se obtienen de la simulacion del programa coppelia. Se cambio por una simulacion diferente con un efector a la medida.

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser eslabon_1\n",
+      "El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser eslabon_2\n",
+      "El nombre en la simulacion de la junta prismatica de la corredera debe ser Corredera, limite minimo : -20 mts, limite maximo 20\n",
+      "El nombre en la simulacion de la junta prismatica del efector final debe ser efector_final, limite minimo : -4 mts, limite maximo 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Variables para configurar entorno \n",
+    "#Estas variables se agregaron dado que la simulacion fuera a modificarse y por ende sus valores \n",
+    "#tales como rangos de juntas prismaticas, nombres de juntas etc.\n",
+    "\n",
+    "#Como esta nombrada la junta revoluta de dicho eslabon\n",
+    "nombre_junta_eslabon_1 = 'eslabon_1' #la primera junta revoluta acoplada a la corredera\n",
+    "nombre_junta_eslabon_2 = 'eslabon_2' #la segunda junta revoluta acoplada a el eslabon anterior\n",
+    "\n",
+    "#Como esta nombrada la junta prismatica de dicho eslabon\n",
+    "nombre_junta_corredera = 'Corredera'\n",
+    "nombre_junta_efector = 'efector_final'\n",
+    "\n",
+    "#Valores de los rangos minimos y maximos de juntas prismaticas (en metros) dado que las funciones se encargan\n",
+    "#de transformar en decimales necesarios \n",
+    "min_corredera,max_corredera = [-20,20]\n",
+    "min_efector,max_efector = [-4,4]\n",
+    "\n",
+    "print(f'El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser {nombre_junta_eslabon_1}')\n",
+    "print(f'El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser {nombre_junta_eslabon_2}')\n",
+    "print(f'El nombre en la simulacion de la junta prismatica de la corredera debe ser {nombre_junta_corredera}, limite minimo : {min_corredera} mts, limite maximo {max_corredera}')\n",
+    "print(f'El nombre en la simulacion de la junta prismatica del efector final debe ser {nombre_junta_efector}, limite minimo : {min_efector} mts, limite maximo {max_efector}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -121,16 +161,16 @@
      "output_type": "stream",
      "text": [
       "EL ID de junta_1 = 17, el ID de junta_2 = 18\n",
-      "El ID de corredera es = 16, el ID del efector final es 28\n"
+      "El ID de corredera es = 16, el ID del efector final es 19\n"
      ]
     }
    ],
    "source": [
     "#Manejadores de juntas revolutas\n",
     "\n",
-    "# Obtenemos el manejador de las juntas (joints)\n",
-    "returnCode,junta_1 = sim.simxGetObjectHandle(clientID,'eslabon_1',sim.simx_opmode_blocking)\n",
-    "returnCode,junta_2 = sim.simxGetObjectHandle(clientID,'eslabon_2',sim.simx_opmode_blocking)\n",
+    "# Obtenemos el manejador de las juntas (joints), y se asignaran a una variable\n",
+    "returnCode,junta_1 = sim.simxGetObjectHandle(clientID,nombre_junta_eslabon_1,sim.simx_opmode_blocking)\n",
+    "returnCode,junta_2 = sim.simxGetObjectHandle(clientID,nombre_junta_eslabon_2,sim.simx_opmode_blocking)\n",
     "#Imprimimos los id de cada junta\n",
     "print(f\"EL ID de junta_1 = {junta_1}, el ID de junta_2 = {junta_2}\")\n",
     "\n",
@@ -138,9 +178,9 @@
     "#Manejadores de juntas prismaticas\n",
     "\n",
     "#Obtenemos el manejador de la corredera que se coloca en la base\n",
-    "returnCode,corredera = sim.simxGetObjectHandle(clientID,'Corredera',sim.simx_opmode_blocking)\n",
+    "returnCode,corredera = sim.simxGetObjectHandle(clientID,nombre_junta_corredera,sim.simx_opmode_blocking)\n",
     "#Obtenemos el manejador del efector final\n",
-    "returnCode,efector_cilindro = sim.simxGetObjectHandle(clientID,'junta_efector',sim.simx_opmode_blocking)\n",
+    "returnCode,efector_cilindro = sim.simxGetObjectHandle(clientID,nombre_junta_efector,sim.simx_opmode_blocking)\n",
     "#Imprimimos el id de cada junta\n",
     "print(f\"El ID de corredera es = {corredera}, el ID del efector final es {efector_cilindro}\")"
    ]
@@ -149,14 +189,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posicionamiento \n",
+    "### Posicionamiento en el simulador\n",
     "\n",
-    "Funciones y demostraciones sobre el como se realiza la simulacion sin entrar en detalles de cinematica aun."
+    "Funciones y demostraciones sobre el como se realiza la simulacion sin entrar en detalles de cinematica aun.\n",
+    "Son las funciones necesarias para modificar en la simulacion posiciones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -184,10 +225,10 @@
     "\n",
     "#Dado que se debe encontrar expresado en Metros la ecuacion sera la siguiente\n",
     "#distancia_en_metros = distancia / 100\n",
-    "#Para esta configuracion distancia debe ir de 0 a 30 en el caso de la corredera\n",
-    "distancia = 30 / 100 \n",
-    "#Para esta configuracion distancia debe ir de -5 a 5 en el caso de la corredera\n",
-    "distancia_efector = -0 / 100 \n",
+    "#Para esta configuracion distancia debe ir de 'min_corredera' hasta 'max_corredera' en el caso de la corredera\n",
+    "distancia = 0 / 100 \n",
+    "#Para esta configuracion distancia debe ir de 'min_efector' hasta 'max_efector' en el caso del efector final\n",
+    "distancia_efector = -4 / 100 \n",
     "\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, corredera,distancia, sim.simx_opmode_oneshot)\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, efector_cilindro,distancia_efector, sim.simx_opmode_oneshot)\n",
@@ -203,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +253,7 @@
        "0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,24 +264,93 @@
     "    Esta funcion permite realizar una rotacion en la junta revoluta desde el angulo actual hasta el deseado (grados)\n",
     "    \"\"\"\n",
     "    radianes = angulo * np.pi/180\n",
-    "    return sim.simxSetJointTargetPosition(clientID, junta, radianes, sim.simx_opmode_oneshot)\n",
+    "    \n",
+    "    #Regresa 0 si se ejecuta correctamente\n",
+    "    return sim.simxSetJointTargetPosition(clientID, junta, radianes, sim.simx_opmode_oneshot) \n",
     "\n",
     "#Ejemplo de como se usa este metodo\n",
-    "mover_junta_revoluta(junta_1,0)\n",
-    "mover_junta_revoluta(junta_2,0)\n",
+    "mover_junta_revoluta(junta_1,-90)\n",
+    "mover_junta_revoluta(junta_2,90)\n",
     "\n",
     "def mover_junta_prismatica(junta,distancia_desde_origen):\n",
     "    \"\"\"\n",
     "    Esta funcion permite realizar un dezplazamiento en la junta prismatica (debe estar expresada en centimetros)\n",
     "    en un rango entre [Pos Min - Pos Range] de la junta prismatica en cuestion\n",
     "    \"\"\"\n",
+    "    \n",
     "    distancia = distancia_desde_origen / 100\n",
+    "    #Regresa 0 si se ejecuta correctamente\n",
     "    return sim.simxSetJointTargetPosition(clientID, junta,distancia, sim.simx_opmode_oneshot)\n",
     "\n",
     "#Ejemplo de como se usa este metodo\n",
-    "mover_junta_prismatica(corredera,0)\n",
-    "mover_junta_prismatica(efector_cilindro,0)"
+    "mover_junta_prismatica(corredera,20)\n",
+    "mover_junta_prismatica(efector_cilindro,4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algunas utilidades realizadas para facilitar la escritura de posiciones comunes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def abajo_corredera():\n",
+    "    \"\"\"\n",
+    "    Envia la corredera a su posicion minima, en el eje Z.\n",
+    "    \"\"\"\n",
+    "    mover_junta_prismatica(corredera,min_corredera)\n",
+    "\n",
+    "\n",
+    "def arriba_corredera():\n",
+    "    \"\"\"\n",
+    "    Envia la corredera a su posicion maxima, en el eje Z.\n",
+    "    \"\"\"\n",
+    "    mover_junta_prismatica(corredera,min_corredera)\n",
+    "\n",
+    "def abrir_efector():\n",
+    "    \"\"\"\n",
+    "    activa el efector , es decir lo baja.\n",
+    "    \"\"\"\n",
+    "    mover_junta_prismatica(efector_cilindro,min_efector)\n",
+    "\n",
+    "def cerrar_efector():\n",
+    "    \"\"\"\n",
+    "    desactiva el efector , es decir lo sube. \n",
+    "    \"\"\"\n",
+    "    mover_junta_prismatica(efector_cilindro,max_efector)\n",
+    "\n",
+    "\n",
+    "def reiniciar_robot():\n",
+    "    \"\"\"\n",
+    "    Deja el robot en su posicion inicial \n",
+    "    \"\"\"\n",
+    "    cerrar_efector()\n",
+    "    abajo_corredera()\n",
+    "    mover_junta_revoluta(junta_1,0)\n",
+    "    mover_junta_revoluta(junta_2,0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cinematica directa del modelo por D-H\n",
+    "\n",
+    "Se realiza un algoritmo de Denavit-Hartenberg para resolver el modelo cinematico directo del robot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
