--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,8 @@
      "text": [
       "El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser eslabon_1\n",
       "El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser eslabon_2\n",
-      "El nombre en la simulacion de la junta prismatica de la corredera debe ser Corredera, limite minimo : -20 mts, limite maximo 20\n",
-      "El nombre en la simulacion de la junta prismatica del efector final debe ser efector_final, limite minimo : -4 mts, limite maximo 4\n"
+      "El nombre en la simulacion de la junta prismatica de la corredera debe ser Corredera, limite minimo : 0 mts, limite maximo 30\n",
+      "El nombre en la simulacion de la junta prismatica del efector final debe ser junta_efector, limite minimo : -5 mts, limite maximo 5\n"
      ]
     }
    ],
@@ -138,12 +138,12 @@
     "\n",
     "#Como esta nombrada la junta prismatica de dicho eslabon\n",
     "nombre_junta_corredera = 'Corredera'\n",
-    "nombre_junta_efector = 'efector_final'\n",
+    "nombre_junta_efector = 'junta_efector'\n",
     "\n",
     "#Valores de los rangos minimos y maximos de juntas prismaticas (en metros) dado que las funciones se encargan\n",
     "#de transformar en decimales necesarios \n",
-    "min_corredera,max_corredera = [-20,20]\n",
-    "min_efector,max_efector = [-4,4]\n",
+    "min_corredera,max_corredera = [0,30]\n",
+    "min_efector,max_efector = [-5,5]\n",
     "\n",
     "print(f'El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser {nombre_junta_eslabon_1}')\n",
     "print(f'El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser {nombre_junta_eslabon_2}')\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
      "output_type": "stream",
      "text": [
       "EL ID de junta_1 = 17, el ID de junta_2 = 18\n",
-      "El ID de corredera es = 16, el ID del efector final es 19\n"
+      "El ID de corredera es = 16, el ID del efector final es 28\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
     "#Para esta configuracion distancia debe ir de 'min_corredera' hasta 'max_corredera' en el caso de la corredera\n",
     "distancia = 0 / 100 \n",
     "#Para esta configuracion distancia debe ir de 'min_efector' hasta 'max_efector' en el caso del efector final\n",
-    "distancia_efector = -4 / 100 \n",
+    "distancia_efector = 5 / 100 \n",
     "\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, corredera,distancia, sim.simx_opmode_oneshot)\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, efector_cilindro,distancia_efector, sim.simx_opmode_oneshot)\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "0"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,8 +283,8 @@
     "    return sim.simxSetJointTargetPosition(clientID, junta,distancia, sim.simx_opmode_oneshot)\n",
     "\n",
     "#Ejemplo de como se usa este metodo\n",
-    "mover_junta_prismatica(corredera,20)\n",
-    "mover_junta_prismatica(efector_cilindro,4)"
+    "mover_junta_prismatica(corredera,30)\n",
+    "mover_junta_prismatica(efector_cilindro,-5)"
    ]
   },
   {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,9 @@
     "    cerrar_efector()\n",
     "    abajo_corredera()\n",
     "    mover_junta_revoluta(junta_1,0)\n",
-    "    mover_junta_revoluta(junta_2,0)\n"
+    "    mover_junta_revoluta(junta_2,0)\n",
+    "    \n",
+    "\n"
    ]
   },
   {
