Cambios minimos para realizacion de algotmi de denavit

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -138,11 +138,11 @@
     "\n",
     "#Como esta nombrada la junta prismatica de dicho eslabon\n",
     "nombre_junta_corredera = 'Corredera'\n",
-    "nombre_junta_efector = 'efector_final'\n",
+    "nombre_junta_efector = 'junta_efector'\n",
     "\n",
     "#Valores de los rangos minimos y maximos de juntas prismaticas (en metros) dado que las funciones se encargan\n",
     "#de transformar en decimales necesarios \n",
-    "min_corredera,max_corredera = [-20,20]\n",
+    "min_corredera,max_corredera = [0,30]\n",
     "min_efector,max_efector = [-4,4]\n",
     "\n",
     "print(f'El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser {nombre_junta_eslabon_1}')\n",
@@ -347,7 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.physics.vector import init_vprinting\n",
+    "init_vprinting(use_latex='mathjax', pretty_print=False)\n",
+    "from sympy.physics.mechanics import dynamicsymbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos las variables que formaran parte de nuestra matriz homogenia de caracter simbolico."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -359,22 +377,26 @@
        "(theta1, theta2, l1, l2, theta, alpha, a, d)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sympy.physics.vector import init_vprinting\n",
-    "init_vprinting(use_latex='mathjax', pretty_print=False)\n",
-    "from sympy.physics.mechanics import dynamicsymbols\n",
     "theta1, theta2, l1, l2, theta, alpha, a, d = dynamicsymbols('theta1 theta2 l1 l2 theta alpha a d')\n",
     "theta1, theta2, l1, l2, theta, alpha, a, d "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definimos la matriz homogenea para parametros de D-H"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +412,7 @@
        "[         0,                      0,                      0,            1]])"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,6 +428,13 @@
     "\n",
     "m = sp.Matrix.vstack(sp.Matrix.hstack(rot, trans), last_row)\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eslabon 1"
    ]
   },
   {
